{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 13,
  "lineage": "d9b8b616-e7de-15ef-d783-1b1174b63de8",
  "resources": [
    {
      "module": "module.us-west-2-stack",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.us-west-2-stack.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:362231138751:vpc/vpc-ddc647a5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-ba4a16d0",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-f5f34d8d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-ddc647a5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-a494f7df",
            "owner_id": "362231138751",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.us-east-1-stack",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.us-east-1-stack.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362231138751:vpc/vpc-a8d094d2",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-c8f6a7a4",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0707e67d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-a8d094d2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-7c5a9902",
            "owner_id": "362231138751",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.us-west-2-stack",
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "module.us-west-2-stack.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:362231138751:loadbalancer/tf-lb-20200912131812801700000001",
            "availability_zones": [
              "us-west-2a",
              "us-west-2b",
              "us-west-2c",
              "us-west-2d"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "tf-lb-20200912131812801700000001-1321873644.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 5,
                "target": "http:80/",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "tf-lb-20200912131812801700000001",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-lb-20200912131812801700000001",
            "security_groups": [
              "sg-028140245e020a943"
            ],
            "source_security_group": "362231138751/port_80_sg_for_task_3_arjun",
            "source_security_group_id": "sg-028140245e020a943",
            "subnets": [
              "subnet-5eeefd27",
              "subnet-84112dcf",
              "subnet-84be53d9",
              "subnet-a5583d8e"
            ],
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.us-west-2-stack.aws_security_group.port_80"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1-stack",
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "module.us-east-1-stack.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:362231138751:loadbalancer/tf-lb-20200912130640827600000001",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c",
              "us-east-1d",
              "us-east-1e",
              "us-east-1f"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "tf-lb-20200912130640827600000001-49299620.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 5,
                "target": "http:80/",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "tf-lb-20200912130640827600000001",
            "idle_timeout": 60,
            "instances": [
              "i-0774df2c73845a8d7",
              "i-0b3a0633edbe4d721"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-lb-20200912130640827600000001",
            "security_groups": [
              "sg-0ed649f74bf3e0e3e"
            ],
            "source_security_group": "362231138751/port_80_sg_for_task_3_arjun",
            "source_security_group_id": "sg-0ed649f74bf3e0e3e",
            "subnets": [
              "subnet-33fc077e",
              "subnet-724b344c",
              "subnet-86806d88",
              "subnet-872a1ca9",
              "subnet-962317ca",
              "subnet-e5b39b82"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.us-east-1-stack.aws_security_group.port_80"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2-stack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "port_80",
      "provider": "module.us-west-2-stack.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:362231138751:security-group/sg-028140245e020a943",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028140245e020a943",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "port_80_sg_for_task_3_arjun",
            "name_prefix": "",
            "owner_id": "362231138751",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-ddc647a5"
          }
        }
      ]
    },
    {
      "module": "module.us-east-1-stack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "port_80",
      "provider": "module.us-east-1-stack.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362231138751:security-group/sg-0ed649f74bf3e0e3e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed649f74bf3e0e3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "port_80_sg_for_task_3_arjun",
            "name_prefix": "",
            "owner_id": "362231138751",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-a8d094d2"
          }
        }
      ]
    }
  ]
}